build: install lib using cmake

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -11,18 +11,32 @@ project(la CXX)
 set(CMAKE_EXPORT_COMPILE_COMMANDS ON)
 set(CMAKE_CXX_MODULE_STD ON)
 
-
-
 add_library(la SHARED)
 target_compile_features(la PRIVATE cxx_std_26)
 target_sources(la PUBLIC
-  FILE_SET moduels TYPE CXX_MODULES
+  FILE_SET modules
+    TYPE CXX_MODULES
     FILES la.cppm
 )
 
-add_executable(test)
-target_sources(test PRIVATE main.cpp)
-target_link_libraries(test PRIVATE la)
-target_compile_features(test PRIVATE cxx_std_26)
-target_compile_options(test PRIVATE -fsanitize=address -Wall -Wextra -Wpedantic)
-target_link_options(test PRIVATE -fsanitize=address)
+install(TARGETS la
+  EXPORT laTargets
+  FILE_SET modules
+    DESTINATION lib/la/miu
+  LIBRARY
+    DESTINATION lib
+  ARCHIVE
+    DESTINATION lib/static
+  CXX_MODULES_BMI
+    DESTINATION lib/la/bmi
+)
+install(EXPORT laTargets
+  FILE laTargets.cmake
+  NAMESPACE uzleo::
+  DESTINATION lib/cmake/la
+  CXX_MODULES_DIRECTORY modules
+)
+install(FILES cmake/laConfig.cmake
+  DESTINATION lib/cmake/la
+)
+
